Se arreglo el input de suscribete (su color)

--- a/css/style.css
+++ b/css/style.css
@@ -447,6 +447,7 @@ textarea{
  }
  input[type="email"]{
    padding-right: 1px;
+   background-color: white;
  }
  .tercera{
    display: inline-block;
